--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class='container'>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%# <p class="notice"><%= notice %1></p> %>
+    <%# <p class="alert"><%= alert %1></p> %>
 
     <%= render 'layouts/header' %>
 
