adding profile picture to the user (not complete)

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Avatar:</strong>
+  <%= image_tag @user.avatar.url, size: '150x150'%>
+</p>
+
+<p>
   <strong>Name:</strong>
   <%= @user.name %>
 </p>
