--- a/app/views/layouts/_account_options.html.erb
+++ b/app/views/layouts/_account_options.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag 'johndoe_gray.png', class: 'header-profile-image', size: '40x40' %>
+<%= image_tag @user.avatar.url, class: 'header-profile-image', size: '40x40' %>
 
 <div class='account-header-menu'>
   <div class='account-header-menu__hello'>
