--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @category.category.name %>
+  <%= @category.category.name if @category.category %>
 </p>
 
 <%= link_to 'Edit', edit_category_path(@category) %> |
