--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
       <% else %>
         <div class='header-right__menu__login'>
           <%= link_to 'LOG IN', new_user_session_path %>
-          <%= link_to 'REGISTER', new_user_registration_path %>
+          <%= link_to 'REGISTER', new_user_path %>
         </div>
       <% end %>
     </div>
