--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, url: users_path, html: { multipart: true } do |f| %>
+<%= form_for @user, html: { multipart: true } do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -11,7 +11,9 @@
     </div>
   <% end %>
 
-  <%= f.file_field :avatar %>
+  <%= f.cropbox :avatar %>
+  <%# <%= f.file_field :avatar %1> %>
+
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
