--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class='sidebar'>
   <ul class='sidebar-list'>
-    <%= sidebar_item 'New Products', new_products_path %>
+    <%= sidebar_item 'New Products', products_path %>
     <%= sidebar_item 'Top Sellers', top_sellers_path %>
     <%= sidebar_item 'Sale', for_sale_path %>
     <%= sidebar_item 'Gift Certificates', for_sale_path, 'separator' %>
