--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,6 +73,10 @@ a {
   font-size: 25px;
 }
 
+.page-middle {
+  margin-top: 20px;
+}
+
 /* categories list */
 
 .sidebar-list, .sidebar-item, .category_line {
@@ -82,7 +86,6 @@ a {
 }
 
 .sidebar {
-  margin-top: 20px;
   font-family: 'Montserrat', sans-serif;
   border-right: 1px solid $separator-color;
 }
@@ -127,4 +130,22 @@ a {
 
 .separator {
   border-bottom: 1px solid $separator-color;
+}
+
+.add_to_cart {
+  background-color: $primary-color;
+}
+
+.product-listing-item {
+  @extend .col-sm-3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px;
+  transition: all 0.05s ease-in;
+  &:hover {
+    -webkit-box-shadow: 0px 2px 6px 3px rgba(199,199,199,1);
+    -moz-box-shadow: 0px 2px 6px 3px rgba(199,199,199,1);
+    box-shadow: 0px 2px 6px 3px rgba(199,199,199,1);
+  }
 }
