--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,11 @@
 
     <%= render 'layouts/header' %>
 
-    <div class='row'>
+    <div class='page-middle row'>
       <div class='col-sm-2'>
         <%= render 'layouts/sidebar' %>
       </div>
-      <div class='col-sm-8'>
+      <div class='col-sm-10'>
         <%= yield %>
       </div>
     </div>
