--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :stock %><br>
     <%= f.number_field :stock %>
   </div>
+  <div class="field">
+    <%= f.label :category_id %><br>
+    <%= f.select :category_id, select_options(@categories), choose_one %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
