adding sparkfun picture to product listing

--- a/app/views/products/_listing_item.html.erb
+++ b/app/views/products/_listing_item.html.erb
@@ -1,5 +1,5 @@
 <div class='product-listing-item'>
-  <%= image_tag listing_item.default_image, size: '200x200' %>
+  <%= image_tag listing_item.default_picture(:medium) %>
   <span><%= listing_item.name %></span>
   <span><%= listing_item.price %></span>
   <%= render 'products/add_to_cart' %>
