--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: 'listing_item', collection: @products %>
+<%= will_paginate @products %>
+<%= render partial: 'products/listing_item', collection: @products %>
+<%= will_paginate @products %>
