new style for register and log in pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,23 @@ a {
   }
 }
 
+input[type=text], input[type=email], input[type=password] {
+  @extend .form-control;
+}
+
+input[type=submit] {
+  @extend .btn, .btn-primary;
+  background-color: $primary-color;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+form>div.actions{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 /* header */
 .header {
   display: flex;
@@ -148,4 +165,19 @@ a {
     -moz-box-shadow: 0px 2px 6px 3px rgba(199,199,199,1);
     box-shadow: 0px 2px 6px 3px rgba(199,199,199,1);
   }
+}
+
+.field {
+  @extend .form-group;
+}
+
+.default-panel {
+  @extend .panel, .panel-default;
+  border-radius: 10px;
+  border-top: 4px solid $primary-color;
+  padding: 10px;
+}
+
+.header-text {
+  color: $primary-color;
 }
