--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -191,3 +191,37 @@ div>.per_page {
   padding: 20px 0px;
 }
 
+
+.product-images-panel {
+  @extend .col-sm-3;
+}
+
+.product-description-panel {
+  @extend .col-sm-7;
+}
+
+.product-price-panel {
+  @extend .col-sm-2, .panel, .panel-default;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.product-right-table {
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  margin-bottom: 10px;
+  margin-top: 15px;
+}
+
+.product-right-table>tbody>tr>td {
+  &:first-child {
+    border-right: 1px solid lightgray;
+    text-align: right;
+    #product_qty {
+      text-align: right;
+    }
+  }
+  padding: 5px;
+}
