add share buttons for social networks

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import 'bootstrap';
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import 'jquery.jcrop';
+@import "social-share-button";
 
 $primary-color: #399ED4;
 $category-border-color: #eee;
