--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,4 +24,5 @@
     </tr>
     <tr><td><%= @product.stock %></td><td>in stock</td></tr>
   </table>
+  <%= social_share_button_tag(@product.name) %>
 </div>
