add TODOs to favorite button and wishlist

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,4 +25,6 @@
     <tr><td><%= @product.stock %></td><td>in stock</td></tr>
   </table>
   <%= social_share_button_tag(@product.name) %>
+  <%= link_to 'add to favorites', '#' %>
+  <%= link_to 'add to wishlist', '#' %>
 </div>
