--- a/app/views/products/_add_to_cart.html.erb
+++ b/app/views/products/_add_to_cart.html.erb
@@ -1,5 +1,7 @@
 <% classes = 'btn-lg' if local_assigns[:large] %>
-<button type='button' class='add_to_cart btn btn-primary <%= classes %>'>
+<button type='button'
+        data-id='<%= product_id %>'
+        class='add_to_cart btn btn-primary <%= classes %>'>
   <span class='add_to_cart__text'>
     <span class='glyphicon glyphicon-shopping-cart'></span>
     Add to cart
