--- a/app/views/products/_listing_item.html.erb
+++ b/app/views/products/_listing_item.html.erb
@@ -2,5 +2,5 @@
   <%= link_to image_tag(listing_item.primary_picture.url(:medium)), listing_item %>
   <span><%= link_to listing_item.name, listing_item %></span>
   <span><%= listing_item.price %></span>
-  <%= render 'products/add_to_cart' %>
+  <%= render 'products/add_to_cart', product_id: listing_item.id %>
 </div>
