--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
 
     <%= render 'layouts/header' %>
 
+    <%= render 'layouts/navbar' %>
+
     <div class='page-middle row'>
       <div class='col-sm-2'>
         <%= render 'layouts/sidebar' %>
