--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,17 +1,19 @@
-<div class='row'>
-  <div class='per_page col-sm-6'>
+<div class='product-listing-top row'>
+  <div class='per_page col-sm-5'>
     <form class='form' method='get'>
       <span>Showing</span>
-      <input type='text' name='per_page' class='per_page_field' />
+      <input type='text' name='per_page'
+             class='per_page_field'
+             value='<%= params[:per_page] %>' />
       <span>per page</span>
       <input type='submit' value='update' />
     </form>
   </div>
-  <div class='col-sm-6'>
-    <%= will_paginate @products, inner_window: 1, outer_window: 2 %>
-  </div>
+  <%= will_paginate @products, inner_window: 2, outer_window: 2 %>
 </div>
-<%= render partial: 'products/listing_item', collection: @products %>
 <div class='row'>
-  <center><%= will_paginate @products, inner_window: 1, outer_window: 2 %></center>
+  <%= render partial: 'products/listing_item', collection: @products %>
+</div>
+<div class='product-listing-footer row'>
+  <%= will_paginate @products, inner_window: 2, outer_window: 2 %>
 </div>
