--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,9 @@ a {
   }
 }
 
-input[type=text], input[type=email], input[type=password], input[type=number] {
+input[type=text], input[type=email],
+input[type=password], input[type=number],
+select {
   @extend .form-control;
 }
 
