change default label for custom file field

--- a/app/views/layouts/_file_field.html.erb
+++ b/app/views/layouts/_file_field.html.erb
@@ -1,5 +1,5 @@
 <label class="btn btn-default btn-file">
   <span class='fa fa-upload'></span>
-  <%= local_assigns[:text] || 'Browse' %>
+  <%= local_assigns[:text] || 'Choose File' %>
   <%= form.file_field field %>
 </label>
