rename submit button on profile page

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -28,7 +28,7 @@
         <%= f.text_area :profile, rows: 4 %>
         <a href='javascript:void(0)' class='format_help'>formatting help</a>
       </div>
-      <%= f.submit 'Update Profile' %>
+      <%= f.submit 'Update' %>
     </div>
   <% end %>
 </div>
