--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
   <div class='container'>
 
     <% if notice %>
-      <div class="alert alert-warning fade in">
-        <a href="javascript:void(0)" class="close" data-dismiss="alert"
-          aria-label="close" title="close">×</a>
-        <%= notice %>
-      </div>
+      <%# <div class="alert alert-warning fade in"> %>
+      <%#   <a href="javascript:void(0)" class="close" data-dismiss="alert" %>
+      <%#     aria-label="close" title="close">×</a> %>
+      <%#   <%= notice %1> %>
+      <%# </div> %>
     <% end %>
     <% if alert %>
       <div class="alert alert-danger fade in">
