--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,3 @@
+<%= render 'products/new_products_carousel', products: @products %>
+<br>
 <p>This is the home page, it will be cooler later. Browse around.</p>
