add style for header menu

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,6 +88,10 @@ form>div.actions{
       margin-right: 10px;
     }
     .account-header-menu {
+      font-family: 'Montserrat';
+      .account-header-menu__hello {
+        color: #555;
+      }
     }
   }
 }
