--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,6 +68,7 @@ form>div.actions{
     .shopping-cart__count {
       margin-right: 15px;
       font-size: 20px;
+      font-family: 'Montserrat';
     }
   }
 
