--- a/app/views/products/_new_products_carousel.html.erb
+++ b/app/views/products/_new_products_carousel.html.erb
@@ -1,7 +1,7 @@
-<a href='<%= products_path %>' class='new-products-carousel-header'>
-  <h4>New Products</h4>
-  <h4>See all</h4>
-</a>
+<h4 href='<%= products_path %>' class='new-products-carousel-header'>
+  <a>New Products</a>
+  <a>See all</a>
+</h4>
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
