--- a/app/views/layouts/_account_options.html.erb
+++ b/app/views/layouts/_account_options.html.erb
@@ -8,6 +8,7 @@
     <a class="dropdown-toggle" data-toggle="dropdown">MY ACCOUNT
     <span class="caret"></span></a>
     <ul class="dropdown-menu">
+      <li><%= link_to 'Address Book', addresses_path %></li>
       <li><%= link_to 'Manage Account', account_path %></li>
       <li><%= link_to 'My Profile', profile_path %></li>
       <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
