--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,19 +1,31 @@
-<% @addresses.each do |address| %>
-  <div class='address-item'>
-    <%= address.title %>
-    <%= address.receiver %>
-    <%= address.street %>
-    <%= address.country %>
-    <%= address.city %>
-    <%= address.postal_code %>
-    <%= address.phone %>
-    <%= address.state %>
-    <%= address.user %>
-    <%= link_to 'Edit', edit_address_path(address) %>
-    <%= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' } %>
-  </div>
-<% end %>
+<div class='user-account__left'>
+  <h1>Addresses</h1>
+  <%= link_to 'New Address', new_address_path %>
+</div>
+<div class='user-account__right'>
+  <h3>Address Book</h3>
+  <% @addresses.each do |address| %>
+    <div class='address-item'>
+      <b><%= address.title %></b><br>
+      <%= address.receiver %><br>
+      <% if !address.company.empty? && !address.company.nil? %>
+        <%= address.company %><br>
+      <% end %>
+      <%= address.street %><br>
+      <% if !address.street_extra.empty? && !address.street_extra.nil? %>
+        <%= address.street_extra %><br>
+      <% end %>
+      <%= "#{address.city}, #{address.state}, #{address.postal_code}" %><br>
+      <%= address.country_name %><br>
+      <%= address.phone %><br>
+      <div class='actions'>
+        <%= link_to 'Edit', edit_address_path(address) %>
+        <%= link_to 'Delete', address, method: :delete %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
 
 <br>
 
-<%= link_to 'New Address', new_address_path %>
